Fix visual issue with inputs/buttons when in dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
   font-weight: 400;
 
   color-scheme: light dark;
+
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
 
@@ -12,7 +13,8 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-#root{
+
+#root {
   width: 90%;
 }
 
@@ -21,6 +23,7 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
@@ -38,7 +41,14 @@ h1 {
   line-height: 1.1;
 }
 
-button {
+input {
+
+  background-color: #f9f9f9;
+  color: #242424;
+}
+
+button,
+select {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -46,12 +56,15 @@ button {
   font-weight: 500;
   font-family: inherit;
   background-color: #f9f9f9;
+  color: #242424;
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
   border-color: #646cff;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
